# get-research-done

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  COLLABORATOR-FEEDBACK-PLAN.md  CONTRIBUTING.md  DIVERGENCE.md  README.md  REFACTOR_PLAN.md  REVIEW-refactor-plan.md  package.json  pyproject.toml  state.json
.github/workflows/: test.yml
.grd/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  state.json  state.json.bak
docs/: README.md  ai-agent-setup-reference.md  audit-domain-agnosticism.md  claude-code.md  codex.md  gemini-cli.md  linux.md  macos.md  migration-guide.md  opencode.md  windows.md
infra/: gpd-verification.json  grd-arxiv.json  grd-conventions.json  grd-errors.json  grd-patterns.json  grd-protocols.json  grd-skills.json  grd-state.json  grd-verification.json
research/: pandoc-latex-pitch.md
research/economics_of_agents/: PROJECT.md  ace-methodology-survey.md  assumption-taxonomy.md  literature-map.md  simulation-results.md
research/formal-proof-integration/: AUTOFORMALIZATION.md  MATHEMATICIAN-WORKFLOWS.md  PITCH.md  STATUS.md  UX-STUDY.md
research/geometry_analysis/: PAPER_OUTLINE.md  RESULTS.md  THEORY.md  __init__.py  feature_geometry.py  intrinsic_dimension.py  modal_pythia_dynamics.py  modal_pythia_multilayer.py  modal_run.py  run_analysis.py  test_theory.py
research/manifold_pipeline/: DIAGNOSTIC_RESULTS.md  PHASE1_CRITIQUE.md  RESULTS.md  __init__.py  __main__.py  activation_extraction.py  config.py  cross_seed_stability.py  literature-review.md  modal_run.py  modal_run_diag_a.py  modal_run_diag_b.py  modal_run_diag_c.py  modal_run_diag_d.py  modal_run_diag_e.py  modal_run_diag_sae.py  modal_run_gemma2.py  run_pipeline.py  sae_comparison.py  stage1_decompose.py  stage2_match.py  stage3_score.py  stage4_characterize.py  test_synthetic.py  token_attribution.py  topology.py  visualization.py
research/moe_superposition/: REVIEW.md  paper_revisions.md
research/reports/: erdos-789-formalization-plan.md
scripts/: release_workflow.py  repo_graph_contract.py
src/gpd/: _python_compat.py  cli.py  contracts.py  registry.py  runtime_cli.py
src/grd/: __init__.py  cli.py  command_labels.py  contracts.py  registry.py  runtime_cli.py  version.py
tests/: README.md  ci_sharding.py  conftest.py  doc_surface_contracts.py  latex_test_support.py  manuscript_test_support.py  new_project_stage_contract_support.py  prompt_metrics_support.py  repo_graph_contract.json  runtime_install_helpers.py  runtime_test_support.py  test_bib_author_sanitization.py  test_bibliography.py  test_bibliography_conflict.py  test_bootstrap_installer.py  test_ci_pytest_workflow_contract.py  test_ci_suite_commands.py  test_citation_coherence.py  test_cli_commands.py  test_cli_coverage.py  test_cli_help_headline.py  test_cli_integration.py  test_cli_plan_contract_default_salvage.py  test_cli_validate_project_contract.py  test_command_boilerplate_cleanup.py  test_command_label_normalization.py  test_compiler_oserror_fix.py  test_docs_onboarding.py  test_figures.py  test_import_stability_contracts.py  test_install_edge_cases.py  test_install_lifecycle.py  test_install_utils_edge.py  test_latex_detection.py  test_latex_utils.py  test_metadata_consistency.py  test_pandoc_filters.py  test_pandoc_utils.py  test_paper_citations.py  test_paper_compiler_regressions.py  (+21 more)
tests/adapters/: conftest.py  review_contract_test_utils.py  test_adapter_regressions.py  test_base.py  test_claude_code.py  test_codex.py  test_frontmatter_regressions.py  test_gemini.py  test_install_roundtrip.py  test_opencode.py  test_registry.py  test_review_contract_runtime_compilation.py  test_review_contract_runtime_surfaces.py  test_runtime_capability_contract.py  test_runtime_catalog.py  test_runtime_projected_command_requirement_coverage.py  test_runtime_projected_prompt_parity.py  test_tool_name_policies.py
tests/core/: conftest.py  test_agent_commit_policy.py  test_agent_role_prompting.py  test_agent_spawn_policy.py  test_arxiv_source_download.py  test_arxiv_submission_alignment.py  test_arxiv_submission_prompt_budget.py  test_bibliographer_prompt_budget.py  test_bibliographer_workflow_seams.py  test_blueprint_core.py  test_bst_natbib_lint.py  test_check_proof_prompt_budget.py  test_check_proof_prompt_visibility.py  test_checkpoints.py  test_cli.py  test_cli_args.py  test_cli_install.py  test_cli_storage_policy.py  test_command_help_drift_regressions.py  test_commands.py  test_complete_milestone_wiring.py  test_config.py  test_config_preset_application.py  test_consistency_checker_contract_vertical.py  test_consistency_checker_prompt_budget.py  test_consistency_checker_reference_contract.py  test_context.py  test_context_contract_boundary.py  test_context_platform.py  test_context_runtime_boundary.py  test_continuation.py  test_contract_schema_prompt_parity.py  test_contract_validation.py  test_contract_validation_fast_regressions.py  test_contract_validation_smoke.py  test_conventions.py  test_core_regressions.py  test_costs.py  test_debug_template_contract.py  test_debug_workflow_contract.py  (+210 more)
(+957 files in other folders)
