[project]
name = "get-research-done"
version = "1.1.0"
description = "GRD — Get Research Done: open-source AI copilot for physics research"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Research Institute" },
]
maintainers = [
    { name = "Research Institute" },
]
keywords = [
    "physical superintelligence",
    "psi",
    "physics",
    "research",
    "ai",
    "agentic",
    "claude",
    "codex",
    "gemini",
    "opencode",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    # Core
    "typer>=0.24.1",
    "rich>=15.0.0",
    "pydantic>=2.13.1",
    "PyYAML>=6.0.3",
    "mcp[cli]>=1.27.0",
    # Utilities
    "pybtex>=0.25.1",
    "Pillow>=12.1.1",
    "jinja2>=3.1.6",
]

[project.optional-dependencies]
arxiv = [
    "arxiv-mcp-server>=0.4.11",
]

[project.scripts]
grd = "grd.cli:entrypoint"
"grd-mcp-conventions" = "grd.mcp.servers.conventions_server:main"
"grd-mcp-verification" = "grd.mcp.servers.verification_server:main"
"grd-mcp-protocols" = "grd.mcp.servers.protocols_server:main"
"grd-mcp-errors" = "grd.mcp.servers.errors_mcp:main"
"grd-mcp-patterns" = "grd.mcp.servers.patterns_server:main"
"grd-mcp-state" = "grd.mcp.servers.state_server:main"
"grd-mcp-skills" = "grd.mcp.servers.skills_server:main"

[project.urls]
Homepage = "https://github.com/Rome-1/get-research-done"
Documentation = "https://github.com/Rome-1/get-research-done#readme"
Repository = "https://github.com/Rome-1/get-research-done"
Issues = "https://github.com/Rome-1/get-research-done/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/grd"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
# Default to maximal local parallelism with worker stealing so giant modules do
# not serialize the suite behind a single xdist worker.
addopts = "-n auto --dist=worksteal"
markers = [
    "no_stable_hook_python: opt out of the autouse _stable_hook_python fixture",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "TID251"]
ignore = ["E501", "B008"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"typing.Any".msg = "Use `object` instead of `Any` for top types."

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.10",
]
